# nfx-stringbuilderpool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_StringBuilderPool.cpp  CMakeLists.txt  README.md
cmake/: nfx-stringbuilderpool-config.cmake.in  nfxStringBuilderPoolBuildConfig.cmake  nfxStringBuilderPoolDependencies.cmake  nfxStringBuilderPoolInstall.cmake  nfxStringBuilderPoolPackaging.cmake  nfxStringBuilderPoolSources.cmake  nfxStringBuilderPoolVersion.rc.in
doc/: CMakeLists.txt
include/nfx/detail/string/: StringBuilderPool.inl
include/nfx/string/: StringBuilderPool.h
samples/: CMakeLists.txt  Sample_StringBuilder.cpp
src/: DynamicStringBufferPool.cpp  DynamicStringBufferPool.h  StringBuilderPool.cpp
test/: CMakeLists.txt  TESTS_StringBuilderPool.cpp
